--- a/style.css
+++ b/style.css
@@ -32,19 +32,19 @@ body {
   }
   
   .red {
-    background-color: red;
+    background-color: rgb(228, 67, 67);
   }
   
   .green {
-    background-color: green;
+    background-color: rgb(7, 130, 13);
   }
   
   .blue {
-    background-color: blue;
+    background-color: rgb(19, 168, 179);
   }
   
   .yellow {
-    background-color: yellow;
+    background-color: rgb(230, 230, 17);
   }
   
   .pressed {
